--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,67 @@
  *= require_tree .
  *= require_self
  */
+.user_data{
+    border: 2px solid #000000;
+    width: 62%;
+    padding: 15px;
+    margin-left: 17px;
+    margin-top: 1.2em;
+}
+.user_container{
+    display: flex;
+    margin: 3em;
+}
+
+.user_img{
+    display: flex;
+    margin-top: 1.2em;
+    margin-left: 1em;
+}
+
+.comments{
+    display: block;
+}
+
+.user_bio{
+    border: 2px solid #000000;
+    width: 78%;
+    margin: 1.3em;
+    padding: 1em;
+}
+.post_container{
+    border: 2px solid #000000;
+    width: 78%;
+    margin: 1.3em;
+    padding: 1em;
+}
+.post_user{
+    border: 2px solid #000000;
+    width: 78%;
+    margin: 1.3em;
+    padding: 1em;
+}
+
+li{
+    list-style: none;
+}
+.post_header{
+    border: 2px solid #000000;
+    width: 78%;
+    margin: 1.3em;
+    padding: 1em;
+}
+
+.comments{
+    border: 2px solid #000000;
+    width: 78%;
+    margin: 1.3em;
+    padding: 1em;
+}
+button{
+    margin: 1.3em;
+    text-decoration: none;
+}
+.see-post{
+    text-decoration: none;
+}
