--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,70 +13,7 @@
  *= require_tree .
  *= require_self
  */
-.user_data {
-  border: 2px solid #000;
-  width: 62%;
-  padding: 15px;
-  margin-left: 17px;
-  margin-top: 1.2em;
-}
-
-.user_container {
-  display: flex;
-  margin: 3em;
-}
-
-.user_img {
-  display: flex;
-  margin-top: 1.2em;
-  margin-left: 1em;
-}
-
-.user_bio {
-  border: 2px solid #000;
-  width: 78%;
-  margin: 1.3em;
-  padding: 1em;
-}
-
-.post_container {
-  border: 2px solid #000;
-  width: 78%;
-  margin: 1.3em;
-  padding: 1em;
-}
-
-.post_user {
-  border: 2px solid #000;
-  width: 78%;
-  margin: 1.3em;
-  padding: 1em;
-}
-
-li {
-  list-style: none;
-}
-
-.post_header {
-  border: 2px solid #000;
-  width: 78%;
-  margin: 1.3em;
-  padding: 1em;
-}
-
-.comments {
-  display: block;
-  border: 2px solid #000;
-  width: 78%;
-  margin: 1.3em;
-  padding: 1em;
-}
-
-button {
-  margin: 1.3em;
-  text-decoration: none;
-}
-
-.see-post {
-  text-decoration: none;
+ .avatar {
+  max-width: 80px;
+  max-height: 90px;
 }
