--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,14 +1,32 @@
+<h1>Show post</h1>
 
-<div class="user_container2">
- <div class="post_header">
-      <h2> Post #<%= @post.id %> by <span><%= @post.author.name %></span></h2>
-      <p><%= @post.text%></p>
-      <div class="comments-likes">Comment <%= @post.comments_counter || 0 %>,  <span>Likes <%= @post.likes_counter || 0%></span>
-      </div></div>
-    <div class="comments">
-    <% @comments.each do |comment| %>
-       <p><%= comment.author.name%>: <%= comment.text%></p>
-    <%end%>
+<article class="post">
+  <h3><%= @post.title %>  by <%= link_to @post.author.name, user_path(@post.author_id) %></h3>
+  <div class="post-stats">
+    <span>Comments: <%= @post.comments_counter %> &nbsp;,&nbsp;</span>
+    <span>Likes: <%= @post.likes_counter %></span>
   </div>
-</div>
+  <p><%= @post.text %></p>
+</article>
+
+<ul class="comments">
+  <% @post.recent_comments.each do |comment| %>
+    <li><%= comment.author.name %>: <%= comment.text %>
+  <% end %>
+</ul> 
+
+<%= form_for @like, url:likes_path do |f|%>
+  <%= f.hidden_field :author_id, value: @post.author.id %>
+  <%= f.hidden_field :post_id, value: @post.id %>
+  <%= f.submit "Like", disable_with: 'updating likes...' %>
+<% end %>
+
+<h4>Add comment</h4>
+<%= form_for @comment, url:comments_path do |f| %>
+  <%= f.hidden_field :author_id, value: @post.author.id %>
+  <%= f.hidden_field :post_id, value: @post.id %>
+  <%= f.label :text %><br />
+  <%= f.text_area :text, placeholder:'Add your Comment' %><br />
+  <%= f.submit "Submit comment", class:'btn', disable_with: 'Submiting Comment...' %>
+<% end %> 
 
