--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,14 +15,14 @@
   <% end %>
 </ul> 
 
-<%= form_for @like, url:likes_path do |f|%>
+<%= form_for @like, url: likes_url do |f|%>
   <%= f.hidden_field :author_id, value: @post.author.id %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.submit "Like", disable_with: 'updating likes...' %>
 <% end %>
 
 <h4>Add comment</h4>
-<%= form_for @comment, url:comments_path do |f| %>
+<%= form_for @comment, url: comments_path do |f| %>
   <%= f.hidden_field :author_id, value: @post.author.id %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.label :text %><br />
