--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,6 +1,7 @@
 <%= render partial:'partials/user_partial', locals: {user: @user}%>
 <% @user_posts.each do |post| %>
 <%= render partial:'partials/post_partial', locals: {post: post}%>
+<button> <%=link_to "See Post", "posts/#{post.id}" %> </button>
 <ul>
 <% post.recent_comments.each do |comment|%>
 <li> <%= comment.author.name%>: <%= comment.text%></li>
