--- a/app/views/partials/_post_partial.html.erb
+++ b/app/views/partials/_post_partial.html.erb
@@ -1,8 +1,5 @@
-<article>
-<h3>
-<%= link_to(post.title, user_post_path(id: post.id, user_id: post.author_id)) %>
-</h3>
-
+<section>
+  <h2>Post #<%= post.id %></h2>
 <p><%= truncate(post.text, length: 125) ... %></p>
   <div class="post-stats">
     <span>Comments <%= post.comments_counter %> &nbsp;,&nbsp;</span>
@@ -10,4 +7,4 @@
   </div>
 </p>
 
-</article>
+</section>
