Show all the posts of the user

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,4 @@
+<p>Display the list of all posts of a specific user</p>
 <div class="user_container">
  <div class="post_header">
       <h2> Post #<%= @post.id %> by <span><%= @post.author.name %></span></h2>
