Add the list of the users

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,3 +1,4 @@
+<p>Display the list of all users</p>
 <% @users.each do |user| %>
 <%= render partial: 'partials/user_partial', locals: { user: user } %>
 <% end %>
