--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,14 +1,14 @@
+<p>Display a specific user</p>
 <%= render partial: 'partials/user_partial', locals: { user: @user } %>
 
 <div >
-<p>Bio
+Bio
 <p>
 <%= @user.bio%>
-</p>
 </p>
 
 <% @recent_post.each do |recent| %>
 <%= render partial: 'partials/post_partial', locals: { post: recent}  %>
 <% end %>
-<%= link_to("See all the post", user_posts_path(@user), class: "see-all")  %>
+<%= link_to("See all posts", user_posts_path(@user), class: "see-all")  %>
 </div>
