--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -24,7 +24,7 @@
 <% end %>
 
 <h4>Add comment</h4>
-<%= form_for @comment, url:comments_path do |f| %>
+<%= form_for @comment, url:comment_post_path do |f| %>
   <%= f.hidden_field :author_id, value: @post.author.id %>
   <%= f.hidden_field :post_id, value: @post.id %>
   <%= f.label :text %><br />
