--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -17,3 +17,101 @@
   max-width: 80px;
   max-height: 90px;
 }
+
+.login-signup {
+  display: flex;
+  justify-content: center;
+  margin-left: -18em;
+  margin-top: 1em;
+}
+
+.field {
+  display: flex;
+  justify-content: center;
+}
+
+#user_email {
+  border: 1px solid #000;
+  width: 25em;
+  margin: 0.5em;
+  padding: 0.6em;
+}
+
+#user_password {
+  border: 1px solid #000;
+  width: 26em;
+  padding: 0.6em;
+}
+
+#user_password_confirmation {
+  border: 1px solid #000;
+  width: 26em;
+  padding: 0.6em;
+}
+
+.field-me {
+  display: flex;
+  justify-content: center;
+  margin-left: -15em;
+  margin-top: 2em;
+}
+
+.actions input {
+  display: flex;
+  justify-content: center;
+  margin-left: 44em;
+  width: 26em;
+  padding: 0.5em;
+}
+
+h2 {
+  display: flex;
+  justify-content: center;
+}
+
+.confirmation {
+  display: flex;
+  justify-content: center;
+  margin-left: -5em;
+}
+
+.forgot-your-password {
+  display: flex;
+  justify-content: center;
+  margin-left: -12em;
+}
+
+.unlock-instructions {
+  display: flex;
+  justify-content: center;
+  margin-left: -18em;
+  margin-top: 1em;
+}
+
+.signin-with {
+  display: flex;
+  justify-content: center;
+  margin-left: -18em;
+  margin-top: 1em;
+}
+
+.field-signup {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 35em;
+  padding: 1.3em;
+}
+
+.errors-messages {
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin-left: 35em;
+}
+
+.navbar-text {
+  display: flex;
+  justify-content: center;
+}
