--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -6,7 +6,7 @@
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul>
+    <ul class="errors-messages">
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
