--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,26 +1,21 @@
-<h2>Sign up</h2>
+<h2 class="container-fluid d-flex justify-content-center">Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
-<div class="field-signup">
-  <div class="field-email">
-  <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+
+  <div class="container-fluid d-flex justify-content-center my-2">
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email" %>
   </div>
 
-  <div class="field-password">
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
+  <div class="container-fluid d-flex justify-content-center position-relative top-9">
+    <%= f.password_field :password, autocomplete: "new-password" , placeholder: "Password" %>
   </div>
 
-  <div class="field-password">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+  <div class="container-fluid d-flex justify-content-center my-3">
+    <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password" %>
   </div>
-</div>
-  <div class="actions">
+
+  <div class="container-fluid d-flex justify-content-center my-3">
     <%= f.submit "Sign up" %>
   </div>
 <% end %>
