--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,12 +1,12 @@
 <% if resource.errors.any? %>
   <div id="error_explanation" data-turbo-cache="false">
-    <h2>
+    <h2 class="container-fluid d-flex justify-content-center ">
       <%= I18n.t("errors.messages.not_saved",
                  count: resource.errors.count,
                  resource: resource.class.model_name.human.downcase)
        %>
     </h2>
-    <ul class="errors-messages">
+    <ul class="container-fluid d-flex justify-content-center">
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
       <% end %>
