--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password" %>
   </div>
    </div>
-  <div class="container-fluid  justify-content-center  m-3 w-40 p-2 border-solid border-3 bg-blue-500 text-white shadow-indigo-500/50">
+  <div class="container d-flex justify-content-center w-80 p-3  border-solid border-3 bg-blue-500 text-white shadow-indigo-500/50">
     <%= f.submit "Sign up" %>
   </div>
 
