--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,13 +1,14 @@
 
-
+<div class="container-fluid mb-3 w-80 bg-zinc-700">
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="container-fluid d-flex justify-content-center m-4 ">
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder: "Email", value: (resource.pending_reconfirmation? ? resource.unconfirmed_email : resource.email) %>
    </div>
-  <div class="container-fluid d-flex justify-content-center mb-3">
+  <div class="container d-flex justify-content-center w-39 p-3  border-solid border-3 bg-blue-500 text-white shadow-indigo-500/50">
     <%= f.submit "Resend confirmation instructions" %>
   </div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+</div>
