--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,5 +1,5 @@
 
-<div class="container-fluid mb-3 w-80 bg-zinc-700">
+<div class="container-fluid  w-80 bg-zinc-700">
 <%= form_for(resource, as: resource_name, url: confirmation_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
   <div class="container-fluid d-flex justify-content-center m-4 ">
