--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password", class: 'p-2'  %>
   </div>
    </div>
-  <div class="container p-3 font-bold text-white bg-blue-500 border-solid d-flex justify-content-center w-80 border-3 shadow-indigo-500/50">
+  <div class="container p-3 font-bold text-white bg-blue-500 border-solid d-flex justify-content-center w-80 border-3 ">
     <%= f.submit "Sign up" %>
   </div>
 
