Add styling to the users

--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag('application') %>
 
 <section>
-<%= image_tag('profile-picture.jpg', class:'avatar')%>
+<%= image_tag('profile-picture.jpg', class:'w-12 h-12')%>
 
 <div>
 
