--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,6 +1,6 @@
 <%= stylesheet_link_tag('application') %>
 
-<section>
+<section class="mt-4 border-4 d-flex border-indigo-500/100">
 <%= image_tag('profile-picture.jpg', class:'w-12 h-12')%>
 
 <div>
