Increase the width of all users

--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,7 +1,7 @@
 <%= stylesheet_link_tag('application') %>
 
-<section class="mt-4 border-4 w-80 d-flex border-indigo-500/100">
-<%= image_tag('profile-picture.jpg', class:'w-12 h-12')%>
+<section class="m-4 border-4 w-80 d-flex border-indigo-500/100">
+<%= image_tag('profile-picture.jpg', class:'m-3 w-12 h-12')%>
 
 <div>
 
