Increase the width of all users

--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,7 +1,7 @@
-
+<div clas="d-flex flex-row">
 <%= image_tag('profile-picture.jpg', class:'m-3 w-12 h-12')%>
 
-<section class="m-4 border-4 w-90 d-flex border-indigo-500/100">
+<div class="m-4 border-4 w-80 d-flex border-indigo-500/100">
 
 <div>
 
@@ -11,4 +11,5 @@
 Number of Posts : <%= user.posts_counter%>
 </p>
 </div>
-</section>
+</div>
+</div>
