--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -5,7 +5,7 @@
 
 <div>
 
-<h2><%= link_to(user.name, user_path(user))%></h2>
+<h2 class="font-bold"><%= link_to(user.name, user_path(user))%></h2>
 
 <p>
 Number of Posts : <%= user.posts_counter%>
