Add the left margin

--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -7,9 +7,9 @@
 
 <h2 class="font-bold"><%= link_to(user.name, user_path(user))%></h2>
 
-<p>
+<div class="ml-16">
 Number of Posts : <%= user.posts_counter%>
-</p>
+</div>
 </div>
 </div>
 </div>
