--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,7 +1,7 @@
 <div class="flex-row d-flex">
-<%= image_tag('profile-picture.jpg', class:'m-3 w-12 h-12')%>
+<%= image_tag('profile-picture.jpg', class:'m-3 md:w-14 md:h-14')%>
 
-<div class="m-4 border-4 w-80 d-flex border-indigo-500/100">
+<div class="m-4 border-4 md:w-80 d-flex border-indigo-500/100">
 
 <div>
 
