Add styling to the title

--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,4 @@
-<p>Display the list of all users</p>
+<div class="justify-center font-bold text-white d-flex bg-slate-500">Display the list of all users</div>
 <% @users.each do |user| %>
 <%= render partial: 'partials/user_partial', locals: { user: user } %>
 <% end %>
