--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,15 +1,15 @@
-<div class=" md:flex-col sm:flex-row">
+<div class="flex flex-col md:flex-row">
 <%= image_tag('profile-picture.jpg', class:'m-3 md:w-14 md:h-14 w-14 h-14')%>
 
 <div class="m-4 border-4 md:w-80 d-flex border-indigo-500/100">
 
-<div>
+<div class="">
 
-<h2 class="font-bold"><%= link_to(user.name, user_path(user))%></h2>
+   <h2 class="font-bold"><%= link_to(user.name, user_path(user))%></h2>
 
-<div class="ml-16">
-Number of Posts : <%= user.posts_counter%>
-</div>
+  <div class="ml-16">
+     Number of Posts : <%= user.posts_counter%>
+   </div>
 </div>
 </div>
 </div>
