--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,6 @@ Bio
             </div>
           </div>
     <%end %>
-    <%= link_to "Add New Post", "/users/#{@user.id}/posts/new", {:class => "see_all_post"} %>
+    <%= link_to "Add New Post", "/users/#{@user.id}/posts/new", {:class => "bg-blue-600 text-white m-6 p-3"} %>
     <button><%=link_to "See all posts", user_posts_path(@user) %></button>
     </div>
