--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<div class="justify-center p-4 font-bold text-white d-flex bg-slate-500">Display a specific user</div>
+<div class="justify-center p-4 text-3xl font-bold text-white d-flex bg-slate-500">Display a specific user</div>
 <%= render partial: 'partials/user_partial', locals: { user: @user } %>
 
 <div class="p-5 m-4 border-4 md:w-84 d-flex border-indigo-500/100">
