Style the new article title

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<h1>Create new post article</h1>
+<div class="justify-center p-4 text-3xl font-bold text-white d-flex bg-slate-500">Create new post article</div>
 <%= form_for @post, url: user_posts_path do |f| %>
   <% if @post.errors.any? %>
     <ul class="errors">
