Bold the title label

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,7 +13,7 @@
   <% end %>
   <%= f.hidden_field :author_id, value: @params ? @params['user_id'] : '' %>
 
-  <div>
+  <div class="text-bold ">
     <%= f.label :title %><br />
     <%= f.text_field :title, placeholder: 'Article title' %>
   </div>
