Increase the font size of the title

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -13,7 +13,7 @@
   <% end %>
   <%= f.hidden_field :author_id, value: @params ? @params['user_id'] : '' %>
 
-  <div class="text-3xl text-bold">
+  <div class="text-3xl text-bold text-slate-500">
     <%= f.label :title %><br />
     <%= f.text_field :title, placeholder: 'Article title' %>
   </div>
