Style the article message area

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -17,7 +17,7 @@
     <%= f.text_field :title, placeholder: 'Article title' %>
   </div>
   <div class="text-3xl text-bold text-slate-500">
-    <%= f.text_area :text, placeholder: 'Type your article message in here...' %>
+    <%= f.text_area :text, placeholder: 'Article message ...' %>
   </div>
   <%= f.submit "Submit post", disable_with: 'Submiting...' %>
   </div>
