--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,7 +16,7 @@
   <div class="mt-4 text-3xl text-bold text-slate-500">
     <%= f.text_field :title, placeholder: 'Article title' %>
   </div>
-  <div class="text-3xl text-bold text-slate-500">
+  <div class="mt-4 text-3xl text-bold text-slate-500">
     <%= f.text_area :text, placeholder: 'Article message ...' %>
   </div>
   <%= f.submit "Submit post", disable_with: 'Submiting...' %>
