--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -18,7 +18,7 @@
   </div>
   <div class="mt-4 text-3xl text-bold text-slate-500">
     <%= f.text_area :text, placeholder: 'Article message ...' %>
-  </div>
+  <div class="w-40 font-bold text-white bg-blue-600 rounded-full">
   <%= f.submit "Submit post", disable_with: 'Submiting...' %>
   </div>
 <% end %> 
