Style the submit button

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -19,6 +19,6 @@
   <div class="mt-4 text-3xl text-bold text-slate-500">
     <%= f.text_area :text, placeholder: 'Article message ...' %>
   <div class="w-40 font-bold text-white bg-blue-600 rounded-full">
-  <%= f.submit "Submit post", disable_with: 'Submiting...' %>
+  <%= f.submit "Submit", disable_with: 'Submiting...' %>
   </div>
 <% end %> 
