--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,4 @@
-<p>Display the list of all posts of a specific user</p>
+<div class="justify-center p-4 text-3xl font-bold text-white d-flex bg-slate-500">Display the list of all posts of a specific user</div>
 <div class="user_container">
  <div class="post_header">
       <h2> Post #<%= @post.id %> by <span><%= @post.author.name %></span></h2>
