--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,7 +7,7 @@
 <%= render partial:'partials/post_partial', locals: {post: post}%>
 </div>
 <button class="w-40 p-3 ml-5 font-bold text-white bg-blue-600 rounded-full"> <%=link_to "See Post", "posts/#{post.id}" %> </button>
-<ul>
+<ul class="flex-col mx-8 my-4 border-4 md:w-84 d-flex border-indigo-500/100">
 <% post.recent_comments.each do |comment|%>
 <li> <%= comment.author.name%>: <%= comment.text%></li>
 <% end %>
