Add border to all posts

--- a/app/views/partials/_post_partial.html.erb
+++ b/app/views/partials/_post_partial.html.erb
@@ -1,4 +1,4 @@
-<section>
+<section class="flex-col mx-8 my-4 border-4 md:w-84 d-flex border-indigo-500/100">
   <h2>Post #<%= post.id %></h2>
 <p><%= truncate(post.text, length: 125) ... %></p>
   <div class="post-stats">
