Style the Add new post button

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -16,4 +16,4 @@
 
 <% end %>
 
-<%= link_to "Add new post", new_user_post_path(@user), class: " see-all-btn" %>
+<%= link_to "Add new post", new_user_post_path(@user), class: "bg-blue-600 text-white m-6 p-3 rounded-full font-bold" %>
