--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,21 @@
-<div class="justify-center p-4 text-3xl font-bold text-white d-flex bg-slate-500">Display the list of all posts of a specific user</div>
+<div class="justify-center p-4 text-3xl font-bold text-white d-flex bg-slate-500">Display a specific post of a specific user</div>
 <div class="user_container">
- <div class="post_header">
+ <div class="flex-col mx-8 my-4 border-4 md:w-84 d-flex border-indigo-500/100">
       <h2> Post #<%= @post.id %> by <span><%= @post.author.name %></span></h2>
       <p><%= @post.text%></p>
       <div class="comments-likes">Comment <%= @post.comments_counter || 0 %>,  <span>Likes <%= @post.likes_counter || 0%></span>
-      </div></div>
-    <div class="comments">
+      </div>
+    </div>
+   <div class="flex-col mx-8 my-4 border-4 md:w-84 d-flex border-indigo-500/100">
     <% if @comments %>
       <% @comments.each do |comment| %>
       
     <h2><%= comment.author.name %>: <%= comment.text %></h2>
-    
+     </div>
   <% end %>
 
 <% end %>
-  </div>
+ 
 </div>
 
 <%= form_for @like, url:likes_path do |f|%>
