--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -30,7 +30,7 @@
 <%= form_for @comment, url:comment_post_path do |f| %>
   <%= f.hidden_field :author_id, value: @post.author.id %>
   <%= f.hidden_field :post_id, value: @post.id %>
-   <div class="mt-4 text-3xl text-bold text-slate-500">
+   <div class="mt-4 ml-4 text-3xl text-bold text-slate-500">
   <%= f.text_area :text, placeholder:'Add your Comment' %><br />
   </div>
   <%= f.submit "Submit comment" %>
