Add the comment box

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,7 +33,7 @@
    <div class="mt-4 ml-6 text-3xl text-bold text-slate-500">
   <%= f.text_area :text, placeholder:'Add your Comment' %><br />
   </div>
-  <div class="w-40 p-3 font-bold text-white bg-blue-600 rounded-full">
+  <div class="w-40 p-3 ml-6 font-bold text-white bg-blue-600 rounded-full">
   <%= f.submit "Submit" %>
   </div>
 <% end %>
