--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,16 +2,16 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
   </div>
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
@@ -19,23 +19,23 @@
       <em><%= @minimum_password_length %> characters minimum</em>
     <% end %>
   </div>
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 </div>
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
     <%= f.submit "Update" %>
   </div>
 <% end %>
 
 <h3>Cancel my account</h3>
 
-<div class="container-fluid d-flex justify-content-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
+<div class="container-fluid p-3 w-75 d-flex justify-content-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
 <%= link_to "Back", :back %>
