--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -2,10 +2,11 @@
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
-    <%= f.label :email %><br />
+  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">
+    <%= f.label :email %><br  />
+    <div class="ml-4">
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+  </div></div>
   <div class="container-fluid p-3 w-75 d-flex justify-content-center">
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
