--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,8 +12,10 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
   </div>
+  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
   <div class="container-fluid p-3 w-75 d-flex justify-content-center">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
+
+    <%= f.label :password %><br  />
     <%= f.password_field :password, autocomplete: "new-password" %>
     <% if @minimum_password_length %>
       <br />
