Remove the font bold

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -12,7 +12,7 @@
     <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
   </div>
-  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
+  <div class="container-fluid  p-3 w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
   <div class="container-fluid p-3 w-75 d-flex justify-content-center">
 
     <%= f.label :password %><br  />
