--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
   <div class="container-fluid  p-3 w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
   <div class="container-fluid p-3 w-75 d-flex justify-content-center">
 
-   <div class=" font-bold ml-5 p-3 d-flex justify-content-center">
+   <div class=" font-bold ml-20  d-flex justify-content-center">
     <%= f.label :password %>
     </div><br  />
     <%= f.password_field :password, autocomplete: "new-password" %>
