--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -29,8 +29,8 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
 </div>
-<div class="d-flex justify-content-center">(we need your current password to confirm your changes)<br /></div>
-  <div class="container-fluid p-3 w-75 d-flex justify-content-center">
+<div class="d-flex  justify-content-center">(we need your current password to confirm your changes)<br /></div>
+  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">
     <%= f.label :current_password %><br />
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
