--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -30,8 +30,10 @@
   </div>
 </div>
 <div class="d-flex  justify-content-center">(we need your current password to confirm your changes)<br /></div>
-  <div class="container-fluid font-bold p-3 w-75 d-flex justify-content-center">
+  <div class="container-fluid font-bold  p-3 w-75 d-flex justify-content-center">
+   <div class="ml-2">
     <%= f.label :current_password %><br />
+    </div>
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
@@ -40,8 +42,7 @@
   </div>
 <% end %>
 
-<h3>Cancel my account</h3>
 
 <div class="container-fluid p-3 w-75 d-flex justify-content-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
 
-<%= link_to "Back", :back %>
+<%= link_to "Back", :back,  class: "bg-blue-600 w-25 d-flex justify-content-center text-white m-6 p-3 rounded-full font-bold" %>
