--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -44,5 +44,6 @@
 
 
 <div class="container-fluid p-3 w-75 d-flex justify-content-center">Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete %></div>
-
+<div class="d-flex justify-content-center">
 <%= link_to "Back", :back,  class: "bg-blue-600 w-25 d-flex justify-content-center text-white m-6 p-3 rounded-full font-bold" %>
+</div>
