--- a/app/views/devise/unlocks/new.html.erb
+++ b/app/views/devise/unlocks/new.html.erb
@@ -7,7 +7,7 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
   </div>
 
-  <div class="actions">
+  <div class="p-3 m-3 container-fluid d-flex justify-content-center w-75">
     <%= f.submit "Resend unlock instructions" %>
   </div>
 <% end %>
