--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,9 +1,9 @@
-<h2 class="container-fluid d-flex justify-content-center">Forgot your password?</h2>
+
 
 <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="container-fluid d-flex justify-content-center mb-3">
+  <div class="p-3 m-3 container-fluid d-flex justify-content-center">
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"Email" %>
   </div>
 
