--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -7,7 +7,7 @@
     <%= f.email_field :email, autofocus: true, autocomplete: "email", placeholder:"Email" %>
   </div>
 
-  <div class="container-fluid d-flex justify-content-center">
+  <div class="container font-bold text-white bg-blue-500 border-solid h-9 d-flex justify-content-center w-80 shadow-indigo-500/50">
     <%= f.submit "Send me reset password instructions" %>
   </div>
 <% end %>
