--- a/app/views/partials/_user_partial.html.erb
+++ b/app/views/partials/_user_partial.html.erb
@@ -1,13 +1,13 @@
 <div class="flex flex-col md:flex-row">
 <%= image_tag('profile-picture.jpg', class:'m-3 md:w-14 md:h-14 w-14 h-14')%>
 
-<div class="m-4 border-4 p-3 md:w-full d-flex border-indigo-500/100">
+<div class="p-3 m-4 border-4 md:w-full d-flex border-indigo-500/100">
 
 <div class="">
 
    <h2 class="font-bold"><%= link_to(user.name, user_path(user))%></h2>
 
-  <div class="ml-16">
+  <div class="ml-14">
      Number of Posts : <%= user.posts_counter%>
    </div>
 </div>
