--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,7 @@
  <%= button_to "Sign Out", destroy_user_session_path, method: :delete %>
 <% else %>
   <%= link_to "Sign up", new_user_registration_path, :class => 'd-flex mt-2 justify-center font-bold text-white bg-blue-500'  %> |
-  <%= link_to "Login", new_user_session_path, :class => 'd-flex  justify-center mt-2 font-bold text-white bg-blue-500'  %>
+  <%= link_to "Login", new_user_session_path, :class => 'd-flex  justify-center mt-2 p-2 font-bold text-white bg-blue-500'  %>
 <% end %>
 </div>
 
