Style the update button

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -37,7 +37,7 @@
     <%= f.password_field :current_password, autocomplete: "current-password" %>
   </div>
 
-  <div class="justify-end w-20 p-3 m-6 font-bold text-white bg-blue-600 rounded-full ml-96 d-flex">
+  <div class="justify-end w-20 p-3 m-6 mx-auto font-bold text-white bg-blue-600 rounded-full d-flex">
     <%= f.submit "Update" %>
   </div>
 <% end %>
