Add flex to the user interface

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -24,7 +24,7 @@
       <br />
     <% end %>
   </div>
-  <div class="p-3 font-bold container-fluid w-75 d-flex justify-content-center">
+  <div class="justify-center p-3 font-bold container-fluid w-75 d-flex">
     <%= f.label :password_confirmation %><br />
     <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
   </div>
