Add flex to the user interface

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -15,7 +15,7 @@
   <div class="p-3 container-fluid w-75 d-flex justify-content-center">(leave blank if you don't want to change it)</div>
   <div class="p-3 container-fluid w-75 d-flex justify-content-center">
 
-   <div class="ml-20 font-bold d-flex justify-content-center">
+   <div class="justify-center ml-20 font-bold d-flex">
     <%= f.label :password %>
     </div><br  />
     <%= f.password_field :password, autocomplete: "new-password" %>
