Add the workflow

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 </div>
 
   <% if notice %>
-  <p class="container-fluid d-flex justify-content-center"><%= notice %></p>
+  <p class="justify-center container-fluid d-flex"><%= notice %></p>
   <% end %>
   <% if alert %>
     <p class="d-flex justify-content-center"><%= alert %></p>
