Modify the  signup button

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
     <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "Password", class: 'p-2'  %>
   </div>
    </div>
-  <div class="bg-blue-600 border-solid  d-flex w-80 border-3">
+  <div class="border-solid  d-flex w-80 border-3">
     <%= f.submit "Sign up" , class: "bg-blue-600  d-flex justify-center text-white ml-3 p-3 border-solid w-80 font-bold" %>
   </div>
 
